--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" type="image/svg+xml" href="asstes/Logo/logo.png" />
+    <title>Divine Innovative</title>
     <link rel="stylesheet" href="src/styles/index.css">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   </head>
