--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="asstes/Logo/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="asstes/Logo/newLogo.png" />
     <title>Divine Innovative</title>
     <link rel="stylesheet" href="src/styles/index.css">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
